# Moirai

./: .cproject  .project  CMakeLists.txt  README.md  params.xml
examples/: CMakeLists.txt  test_pde_mol.cpp
src/: CMakeLists.txt  Cubature.cpp  Cubature.h  GraphCreation.cpp  GraphCreation.h  Integration.cpp  Integration.h  Io.cpp  Io.h  Mesh.cpp  Mesh.h  Moirai.cpp  Moirai.h  Pde.cpp  Pde.h  Preconditioner.cpp  Preconditioner.h  Types.h  Utils.cpp  Utils.h
